--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/data.js"></script>
 </head>
 
 <body>
 
     <header>
         <div class="container">
-            <div class="row p-3" style="background-color: lightgray;">
-                <div class="input-group m-3">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">Prioridad</button>
-                    <ul class="dropdown-menu ">
-                        <li><a class="dropdown-item" href="#">URGENTE</a></li>
-                        <li><a class="dropdown-item" href="#">Diaria</a></li>
-                        <li><a class="dropdown-item" href="#">Mensual</a></li>
-                    </ul>
-                    <input type="text" class="form-control" aria-label="Text input with dropdown button">
-                </div>
-                <button type="button" class="btn btn-success col-sm-12 col-md-1 m-3 p-1">Guardar</button>
+            <div class="row p-3" style="background-color: lightgray;" id="guardarTarea">
+                <form class="input-group m-3">
+                    <select class="col form-select" aria-label="Default select example" id="selectPrioridad"
+                        name="prioridad">
+                        <option selected>Selecciona prioridad</option>
+                        <option value="urgente">URGENTE</option>
+                        <option value="diaria">Diaria</option>
+                        <option value="mensual">Mensual</option>
+                    </select>
+                    <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                        id="inputGuardar" name="titulo">
+                    <button type="submit" class="btn btn-success col-sm-12 col-md-1 m-3 p-1" id="guardar"
+                        name="submitGuardar">Guardar</button>
+                </form>
+
             </div>
             <div class="row p-3">
                 <select class="col form-select" aria-label="Default select example">
@@ -40,9 +44,11 @@
         </div>
     </header>
     <main>
-        <div class="tarea">
-            <p></p>
-        </div>
+        <!--  <ul id="listaTareas">
+            <li><button class="delete"></button></li>
+            <li><button class="delete"></button></li>
+            <li><button class="delete"></button></li>
+        </ul> -->
     </main>
     <footer>
         <div class="container">
