Implementado botón DELETE

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <option value="2">Diaria</option>
                     <option value="3">Mensual</option>
                 </select>
-                <input class="form-control me-2 col" type="search" placeholder="Buscar" aria-label="Search">
+                <input class="form-control me-2 col" type="search" placeholder="Buscar" aria-label="Search" id="search">
             </div>
         </div>
     </header>
