--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <div class="container">
-            <div class="row p-3" style="background-color: lightgray;" id="guardarTarea">
+            <div class="row" style="background-color: lightgray;" id="guardarTarea">
                 <form class="input-group m-3">
                     <select class="col form-select" aria-label="Default select example" id="selectPrioridad"
                         name="prioridad">
@@ -25,19 +25,18 @@
                         <option value="diaria">Diaria</option>
                         <option value="mensual">Mensual</option>
                     </select>
-                    <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                        id="inputGuardar" name="titulo">
-                    <button type="submit" class="btn btn-success col-sm-12 col-md-1 m-3 p-1" id="guardar"
-                        name="submitGuardar">Guardar</button>
+                    <input type="text" class="form-control" id="inputGuardar" name="titulo">
+                    <button type="submit" class="btn btn-success col-sm-12 col-md-1" id="guardar"
+                        name="submit">Guardar</button>
                 </form>
 
             </div>
             <div class="row p-3">
-                <select class="col form-select" aria-label="Default select example">
+                <select class="col form-select" aria-label="Default select example" id="filtro">
                     <option selected>Abre este menú select</option>
-                    <option value="1">URGENTE</option>
-                    <option value="2">Diaria</option>
-                    <option value="3">Mensual</option>
+                    <option value="urgente">URGENTE</option>
+                    <option value="diaria">Diaria</option>
+                    <option value="mensual">Mensual</option>
                 </select>
                 <input class="form-control me-2 col" type="search" placeholder="Buscar" aria-label="Search" id="search">
             </div>
